--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>WhatsApp Link Generator</title>
+  <title>Gerador de Link de WhatsApp</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
   <div id="container">
-    <div class="title">WhatsApp Link Generator</div>
+    <div class="title">Gerador de Link de WhatsApp</div>
+
+    <div>
+      Você não precisa do contato de desconhecidos na sua agenda!
+      <br>
+      Digite o número e clique no link para abrir um novo chat.
+      <br>
+      <div class="disclaimer">
+        Disponível até o WhatsApp fazer o serviço deles direito. Aproveite! 😀
+      </div>
+    </div>
 
     <form id="form" action="#">
-      <div class="block">
-        <label for="country">Country Code</label>
+      <div class="block hidden">
+        <label for="country">Código do País</label>
         <input id="country" type="number" class="input" autocomplete="off" value="55">
       </div>
       <div class="block">
@@ -20,13 +30,13 @@
         <input id="ddd" type="number" class="input" autocomplete="off" value="34">
       </div>
       <div class="block">
-        <label for="phone">Phone Number</label>
+        <label for="phone">Número do Telefone</label>
         <input id="phone" type="number" autocomplete="off" class="input">
       </div>
     </form>
 
     <span id="preview"></span>
-    <a id="link" href="#">type phone number</a>
+    <a id="link" href="#" />
   </div>
 </body>
 
@@ -42,6 +52,10 @@
     flex-direction: column;
     text-align: center;
     font-size: 1.2rem;
+  }
+
+  .hidden {
+    display: none;
   }
 
   .title {
@@ -80,6 +94,13 @@
     font-size: 1.2rem;
   }
 
+  .disclaimer {
+    font-size: 1rem;
+    color: grey;
+    margin-top: 0.7rem;
+    margin-bottom: 0.3rem;
+  }
+
   /* HIDE ARROWS IN INPUT NUMBER */
   /* Chrome, Safari, Edge, Opera */
   input::-webkit-outer-spin-button,
@@ -96,6 +117,9 @@
 
 <script>
   const link  = document.getElementById('link');
+  const defaultLinkText = '☝️ Digite o número';
+  link.innerText = defaultLinkText;
+
   const preview = document.getElementById('preview');
 
   const country = document.getElementById('country');
@@ -126,7 +150,7 @@
 
         const href = `https://api.whatsapp.com/send?phone=${phoneNumber}`;
         const text = !phone.value
-          ? 'type phone number'
+          ? defaultLinkText
           : `+${country.value} ${ddd.value} ${phone1} ${phone2}\n${href}`;
 
         link.innerText = text;
