--- a/index.html
+++ b/index.html
@@ -160,7 +160,16 @@
       });
     });
   }
-
-
 </script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TXJHVM4WMH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TXJHVM4WMH');
+</script>
+
 </html>
