--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Gerador de Link de WhatsApp</title>
+  <link rel="icon" href="./favicon.png">
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
   <div id="container">
+    <div>
+      <img src="./coffee_whatsapp.png" height="90"/>
+    </div>
     <div class="title">Gerador de Link de WhatsApp</div>
 
     <div>
