--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@
       </div>
       <div class="block">
         <label for="phone">Número do Telefone</label>
-        <input id="phone" type="number" autocomplete="off" class="input">
+        <input id="phone" type="number" autocomplete="off" class="input" value="910238">
       </div>
     </form>
 
-    <span id="preview"></span>
-    <a id="link" href="#" />
+
+    <a id="anchor" href="#">
+      <div id="preview"></div>
+      <div id="link"></div>
+    </a>
   </div>
 </body>
 
@@ -82,11 +85,20 @@
   }
 
   a {
-    margin-top: 2rem;
     color: cadetblue;
     font-size: 1.5rem;
     text-decoration: none;
     font-variant: small-caps;
+  }
+
+  #anchor {
+    margin-top: 1rem;
+  }
+
+  #preview {
+    color: cadetblue;
+    font-size: 1.7rem;
+    margin-bottom: 1rem;
   }
 
   input {
@@ -120,6 +132,7 @@
 </style>
 
 <script>
+  const anchor  = document.getElementById('anchor');
   const link  = document.getElementById('link');
   const preview = document.getElementById('preview');
 
@@ -139,7 +152,7 @@
 
   form.addEventListener('submit', (e) => {
     e.preventDefault();
-    link.click();
+    anchor.click();
   });
 
   for (input of document.querySelectorAll('input')) {
@@ -163,14 +176,12 @@
       const phone2 = phone.value.substr(5);
 
       const href = `https://wa.me/${phoneNumber}`;
-      const text = !phone.value
-        ? defaultLinkText
-        : `+${country.value} ${ddd.value} ${phone1} ${phone2}\n${href}`;
+      const previewText = `+${country.value} ${ddd.value} ${phone1} ${phone2}`;
+      const linkText = !phone.value ? defaultLinkText : href;
 
-      link.innerText = text;
-      link.href = href;
-
-      const preview = `+${country.value} ${ddd.value} ${phone1} ${phone2}`;
+      anchor.href = href;
+      link.innerText = linkText;
+      preview.innerText = previewText;
     });
   }
 </script>
