--- a/index.html
+++ b/index.html
@@ -39,15 +39,19 @@
       </div>
     </form>
 
+    <div id="preview" class="add-number"></div>
 
-    <a id="anchor" href="#">
-      <div id="preview"></div>
-      <div id="link"></div>
+    <a id="anchor" href="#" class="link-button hidden">
+      👉 &nbsp; Criar Chat &nbsp; 💬
     </a>
   </div>
 </body>
 
 <style>
+  .hidden {
+    display: none;
+  }
+
   html {
     font-size: 15px;
   }
@@ -59,14 +63,15 @@
     flex-direction: column;
     text-align: center;
     font-size: 1.2rem;
+    padding: 15px;
   }
 
   .hidden {
-    display: none;
+    visibility: hidden;
   }
 
   .title {
-    color: cadetblue;
+    color: #199683;
     font-variant: small-caps;
     font-size: 1.8rem;
     margin-bottom: 0.8rem;
@@ -84,29 +89,42 @@
     font-variant: all-petite-caps;
   }
 
-  a {
-    color: cadetblue;
+  #preview {
+    margin: 1.2rem auto 0.8rem auto;
+  }
+
+  .add-number {
+    display: block;
+    color: #199683;
     font-size: 1.5rem;
-    text-decoration: none;
     font-variant: small-caps;
   }
 
-  #anchor {
-    margin-top: 1rem;
+  .preview {
+    color: #199683;
+    font-size: 1.7rem;
   }
 
-  #preview {
-    color: cadetblue;
-    font-size: 1.7rem;
-    margin-bottom: 1rem;
+  .link-button {
+    background: #1ebea5;
+    color: white;
+    max-width: 240px;
+    font-size: 1.8rem;
+    padding: 0 2rem;
+    line-height: 3.2rem;
+    border-radius: 7px;
+    margin: 0 auto;
+    font-variant: all-small-caps;
+    text-decoration: none;
+    display: block;
   }
 
   input {
     text-align: center;
-    line-height: 2rem;
+    line-height: 2.4rem;
     margin-top: 0.3rem;
     border-radius: 5px;
-    border: solid 1px cadetblue;
+    border: solid 1px #199683;
     font-size: 1.2rem;
   }
 
@@ -133,7 +151,6 @@
 
 <script>
   const anchor  = document.getElementById('anchor');
-  const link  = document.getElementById('link');
   const preview = document.getElementById('preview');
 
   const country = document.getElementById('country');
@@ -144,7 +161,7 @@
 
   /* Set link placeholder */
   const defaultLinkText = '☝️ Digite o número';
-  link.innerText = defaultLinkText;
+  preview.innerText = defaultLinkText;
 
   /* Set DDD */
   const storedDdd = localStorage.getItem('ddd') ?? 34;
@@ -192,17 +209,19 @@
 
       /* Set HTML values */
       let href = '#';
-      let previewText = '';
-      let linkText = defaultLinkText;
+      let previewText = defaultLinkText;
 
       if (phoneValue) {
-        linkText = `https://wa.me/${phoneNumber}`;
-        previewText = `👉 +${country.value} ${ddd.value} ${phone1} ${phone2}`;
+        previewText = `+${country.value} ${ddd.value} ${phone1} ${phone2}`;
         href = `https://wa.me/${phoneNumber}`;
+        anchor.className = 'link-button';
+        preview.className = 'preview';
+      } else {
+        anchor.className = 'link-button hidden';
+        preview.className = 'add-number';
       }
 
       anchor.href = href;
-      link.innerText = linkText;
       preview.innerText = previewText;
     });
   }
