--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
+  <a class="github" href="https://github.com/jpenna/whatsapp-link-generator">
+    <img src="github.png" alt="github" height="29px" />
+  </a>
+
   <div id="container">
     <div>
       <img src="./coffee_whatsapp.png" height="90"/>
@@ -44,6 +48,7 @@
     <a id="anchor" href="#" class="link-button hidden">
       👉 &nbsp; Criar Chat &nbsp; 💬
     </a>
+
   </div>
 </body>
 
@@ -133,6 +138,15 @@
     color: grey;
     margin-top: 0.7rem;
     margin-bottom: 0.3rem;
+  }
+
+  .github {
+    position: absolute;
+    right: 10px;
+    opacity: 0.85;
+    width: 50px;
+    height: 40px;
+    text-align: end;
   }
 
   /* HIDE ARROWS IN INPUT NUMBER */
