--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Criador de Chat do WhatsApp</title>
-  <link rel="icon" href="./favicon.png">
+  <link rel="icon" href="./images/favicon.png">
+  <link rel="manifest" href="manifest.json">
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
   <a class="github" href="https://github.com/jpenna/whatsapp-link-generator">
-    <img src="github.png" alt="github" height="29px" />
+    <img src="./images/github.png" alt="github" height="29px" />
   </a>
 
   <div id="container">
     <div>
-      <img src="./coffee_whatsapp.png" height="90"/>
+      <img src="./images/coffee_whatsapp.png" height="90"/>
     </div>
     <div class="title">Criador de Chat do WhatsApp</div>
 
@@ -242,13 +243,19 @@
 </script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TXJHVM4WMH"></script>
+<script async src="https://www.googletagmanager.com/gtag/js"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  (() => {
+    const { hostname } = location;
+    if (!hostname || hostname === '127.0.0.1' || hostname === 'localhost') {
+      return;
+    }
 
-  gtag('config', 'G-TXJHVM4WMH');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-TXJHVM4WMH');
+  })();
 </script>
 
 </html>
