--- a/index.html
+++ b/index.html
@@ -10,13 +10,27 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
-  <button id="installButton" type="button" class="install-button">
+  <button id="installButton" type="button">
     ⭐️ Instalar
   </button>
 
-  <a class="github" href="https://github.com/jpenna/whatsapp-link-generator">
-    <img src="./images/github.png" alt="github" height="29px" />
-  </a>
+  <div class="external-bar">
+    <a
+      href="mailto:juliano@pennaid.com?subject=Criar Chat do WhatsApp"
+      class="contato"
+      target="_blank"
+      rel="noopener noreferrer"
+      class="contato"
+    >
+      📧
+    </a>
+
+    <a class="github" href="https://github.com/jpenna/whatsapp-link-generator">
+      <img src="./images/github.png" alt="github" height="32px" />
+    </a>
+  </div>
+
+
 
   <div id="container">
     <div>
@@ -54,7 +68,6 @@
     <a id="anchor" href="#" class="link-button hidden">
       👉 &nbsp; Criar Chat &nbsp; 💬
     </a>
-
   </div>
 </body>
 
