--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   </button>
 
   <div class="external-bar">
+    <button type="button" id="share">
+      <img src="images/share.svg" height="32px" />
+    </button>
+
     <a
       href="mailto:juliano@pennaid.com?subject=Criar Chat do WhatsApp"
       class="contato"
@@ -168,6 +172,77 @@
     input.addEventListener('keydown', updateField);
     input.addEventListener('paste', onPaste);
   }
+</script>
+
+<!-- Share -->
+<script>
+  function fallbackCopyTextToClipboard(text) {
+    var textArea = document.createElement("textarea");
+    textArea.value = text;
+
+    // Avoid scrolling to bottom
+    textArea.style.top = "-99999px";
+    textArea.style.left = "-999999px";
+    textArea.style.position = "fixed";
+
+    document.body.appendChild(textArea);
+    textArea.focus();
+    textArea.select();
+
+    let result = false
+    try {
+      console.log('Fallback: Copy using textarea');
+      result = document.execCommand('copy');
+    } catch (err) {
+      console.error('Fallback: Oops, unable to copy', err);
+    }
+
+    // document.body.removeChild(textArea);
+    return result;
+  }
+
+  const copyText = (text) => {
+    if (!navigator.clipboard) {
+      return fallbackCopyTextToClipboard(text);
+    }
+
+    return navigator.clipboard.writeText(text)
+      .then(() => {
+        console.log('Async: Copying to clipboard was successful!');
+        return true;
+      })
+      .catch((err) => {
+        console.error('Async: Could not copy text: ', err);
+        return false;
+      });
+  }
+
+  document.getElementById('share').addEventListener('click', async () => {
+    const url = 'https://whatsapp.pennaid.com';
+    const text = `Criar Chat do WhatsApp - ${url}`
+    let result = false;
+
+    if (navigator.share) {
+      navigator.share({
+          title: document.title,
+          url,
+        }).then(() => {
+          console.log('Thanks for sharing!');
+        })
+        .catch((err) => {
+          console.error(err);
+          copyText(text);
+        });
+    } else {
+      result = await copyText(text);
+    }
+
+    if (result) {
+      alert('O link da página foi copiado!');
+    } else {
+      alert('Houve um erro ao copiar o link.');
+    }
+  });
 </script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
