Update action icons

--- a/index.html
+++ b/index.html
@@ -16,21 +16,26 @@
 
   <div class="external-bar">
     <button type="button" id="share">
-      <img src="images/share.svg" height="32px" />
+      <img src="images/share.svg" height="30px" />
     </button>
 
     <a
-      href="mailto:juliano@pennaid.com?subject=Criar Chat do WhatsApp"
-      class="contato"
+      id="contato"
       target="_blank"
       rel="noopener noreferrer"
       class="contato"
+      href="mailto:juliano@pennaid.com?subject=Criar Chat do WhatsApp"
     >
-      📧
+      <img src="images/mail.svg" height="30px" />
     </a>
 
-    <a class="github" href="https://github.com/jpenna/whatsapp-link-generator">
-      <img src="./images/github.png" alt="github" height="32px" />
+    <a
+      id="github"
+      target="_blank"
+      rel="noopener noreferrer"
+      href="https://github.com/jpenna/whatsapp-link-generator"
+    >
+      <img src="./images/github.svg" alt="github" height="32px" />
     </a>
   </div>
 
